Bake to vertex colors completely broken in 3.1 & 3.2 #95969

Closed
opened 2022-02-22 21:41:07 +01:00 by Jan Kadeřábek · 18 comments

System Information
Operating system: Win 10
Graphics card: 980 Ti

Blender Version
Broken: 3.1 beta & 3.2 alpha
Worked: 3.0.1

Caused by 74afc86d4b

Baking to vertex colors (for example ambient occlusion) seems to be completely broken since 3.1 beta, as it is producing randomly looking artifacts, nowhere near to expected results.
The same scene & baking / rendering settings works better in 3.0.1 (with smaller bugs).
bake-to-vcols_3.0.1_vs_3.1.jpg

When rendering to texture, the same setup works correctly even in 3.1 beta & 3.2 alpha.

Exact steps for others to reproduce the error
Open the attached .blend file in 3.0.1 and 3.1 beta / 3.2 alpha, hit Bake and compare results.
bake-to-vcols_3.1-3.2_bug.blend

**System Information** Operating system: Win 10 Graphics card: 980 Ti **Blender Version** Broken: 3.1 beta & 3.2 alpha Worked: 3.0.1 Caused by 74afc86d4b Baking to vertex colors (for example ambient occlusion) seems to be completely broken since 3.1 beta, as it is producing randomly looking artifacts, nowhere near to expected results. The same scene & baking / rendering settings works better in 3.0.1 (with smaller bugs). ![bake-to-vcols_3.0.1_vs_3.1.jpg](https://archive.blender.org/developer/F12883341/bake-to-vcols_3.0.1_vs_3.1.jpg) When rendering to texture, the same setup works correctly even in 3.1 beta & 3.2 alpha. **Exact steps for others to reproduce the error** Open the attached .blend file in 3.0.1 and 3.1 beta / 3.2 alpha, hit Bake and compare results. [bake-to-vcols_3.1-3.2_bug.blend](https://archive.blender.org/developer/F12883335/bake-to-vcols_3.1-3.2_bug.blend)

Added subscriber: @JanKaderabek

Added subscriber: @JanKaderabek

#96009 was marked as duplicate of this issue

#96009 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Thanks for the report. Can confirm. This got affected between c4bedeb018 - 0379ddac7d

@lichtwerk can you find the exact commit?

Thanks for the report. Can confirm. This got affected between c4bedeb0186b - 0379ddac7d68 @lichtwerk can you find the exact commit?
Member

Added subscribers: @leesonw, @brecht

Added subscribers: @leesonw, @brecht
Member

Caused by 74afc86d4b

CC @brecht
CC @leesonw

Caused by 74afc86d4b CC @brecht CC @leesonw

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58

Added subscriber: @jakasan2000

Added subscriber: @jakasan2000
Antanas self-assigned this 2022-02-23 13:15:49 +01:00

yes the same

yes the same
Antanas was unassigned by Pratik Borhade 2022-02-23 13:18:15 +01:00
Member

@jakasan2000 hi, please don't claim any task unless you are planning to fix them :)

@jakasan2000 hi, please don't claim any task unless you are planning to fix them :)

Thank you guys for confirming the problem, I just hope somebody will be able to fix this without reverting that "ray offsetting" commit, because it fixes another issue I am facing when baking to vcols (black artifacts when mesh is far from 0). Thank you again!

Thank you guys for confirming the problem, I just hope somebody will be able to fix this without reverting that "ray offsetting" commit, because it fixes another issue I am facing when baking to vcols (black artifacts when mesh is far from 0). Thank you again!

This issue was referenced by 0781c22cee

This issue was referenced by 0781c22ceedc6700a073c620723270d32b2f2852
Member

Added subscriber: @markbola3d

Added subscriber: @markbola3d

Added subscriber: @Sparazza

Added subscriber: @Sparazza

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-02-24 19:40:44 +01:00
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:52:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95969
No description provided.